# fc-emulator-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: cpu.rs
src/: emulator.rs  lib.rs  main.rs  window.rs
src/bus/: apu_io_registers.rs  bus.rs  cpu_ram.rs  mod.rs  nametable.rs  oam.rs  palettes.rs  registers.rs  vram.rs
src/cpu/: addressing_modes.rs  cpu.rs  disassembler.rs  instructions.rs  mod.rs  opcodes.rs  registers.rs
src/mapper/: mapper000.rs  mapper001.rs  mapper003.rs  mod.rs
src/memory/: mapper.rs  mod.rs
src/ppu/: mod.rs  ppu.rs  ppu_impl.rs  renderer.rs
src/tests/: mod.rs  test_egui.rs  test_ppu.rs  test_rom.rs  test_run.rs  test_wgpu.rs
src/utils/: disassembler.rs  mod.rs  palettes.rs  window.rs
